[package]
name = "solen-solver"
version = "0.1.0"
edition = "2021"
description = "Solen intent solver — watches for intents and submits optimal solutions"

[[bin]]
name = "solen-solver"
path = "src/main.rs"

[dependencies]
solen-types = { path = "../solen/crates/solen-types" }
solen-crypto = { path = "../solen/crates/solen-crypto" }
solen-intents = { path = "../solen/crates/solen-intents" }

tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
